assets/css/app.scss
---
---

$family-primary: Arial, sans-serif;
$primary: black;
$text: black;

// Import Main CSS file from theme
@import "main";

.html {
  scroll-padding-top: $navbar-height;
}

.section {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    scroll-margin-top: $navbar-height;
  }
}

.title {
  font-weight: bold;
}

.title,
.subtitle {
  hyphens: manual;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: bold;
    hyphens: manual;
  }
}

.content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: bold;
    hyphens: manual;
  }
}

body {
  hyphens: auto;
  /* visibility: hidden; /* This hides the content */
}

/* This class will be added by JavaScript when the language specific content is ready to be shown */
body.language-ready {
  visibility: visible;
}

pre code {
  color: black;
}

